--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.core:core:1.1.0'
     implementation 'androidx.media:media:1.1.0'
+
+    // Rxjava
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
