--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,9 @@ dependencies {
     // Rxjava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'androidx.exifinterface:exifinterface:1.1.0-beta01'
 }
