--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,8 @@ dependencies {
     //glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'androidx.exifinterface:exifinterface:1.1.0-beta01'
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 apply plugin: 'com.google.gms.google-services'
